添加多端口支持

--- a/public/template/dialog/docker_config.html
+++ b/public/template/dialog/docker_config.html
@@ -32,7 +32,7 @@
   <p>
     <small>开放的端口,冒号左边代表容器内部端口,右边代表宿主机端口,通常保持相同即可。</small>
   </p>
-  <p><small>目前最多只准许开放一个</small></p>
+  <p><small>多个端口之间用,号隔开</small></p>
   <div class="input-group input-group-sm">
     <span class="input-group-addon" id="sizing-addon3">开放端口</span>
     <input type="text" class="form-control" placeholder="可填，列如 25565:25565" aria-describedby="sizing-addon3" v-model="dockerPorts" />
